<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3F41"
    android:orientation="vertical"
    tools:context="kr.ac.kumoh.s20130053.calculator.MainActivity">
    <!-- #3C3F41 배경색 -->
    <!-- #2B2B2B 버튼 배경색 -->

    <TextView
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/init_value"
        android:textSize="75sp"
        android:textColor="#FFF"
        android:gravity="bottom|end"
        android:paddingEnd="15sp"
        />

    <LinearLayout
        style="@style/Linear_style">

        <Button
            style="@style/Button_style"
            android:id="@+id/button_ac"
            android:text="@string/Button_AC"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_complement"
            android:text="@string/Button_Complement"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_percent"
            android:text="@string/Button_Percent"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_divide"
            android:text="@string/Button_Divide"
            android:background="@color/colorAccent"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/Linear_style">

        <Button
            style="@style/Button_style"
            android:id="@+id/button_7"
            android:text="@string/Button_7"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_8"
            android:text="@string/Button_8"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_9"
            android:text="@string/Button_9"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_multiplication"
            android:text="@string/Button_Multiplication"
            android:background="@color/colorAccent"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/Linear_style">

        <Button
            style="@style/Button_style"
            android:id="@+id/button_4"
            android:text="@string/Button_4"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_5"
            android:text="@string/Button_5"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_6"
            android:text="@string/Button_6"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_minus"
            android:text="@string/Button_Minus"
            android:background="@color/colorAccent"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/Linear_style">

        <Button
            style="@style/Button_style"
            android:id="@+id/button_1"
            android:text="@string/Button_1"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_2"
            android:text="@string/Button_2"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_3"
            android:text="@string/Button_3"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_plus"
            android:text="@string/Button_Plus"
            android:background="@color/colorAccent"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/Linear_style"
        android:layout_marginBottom="5sp">

        <Button
            style="@style/Button_style"
            android:id="@+id/button_0"
            android:text="@string/Button_0"
            android:layout_weight="2.12"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_dot"
            android:text="@string/Button_Dot"
            />

        <Button
            style="@style/Button_style"
            android:id="@+id/button_equal"
            android:text="@string/Button_Equal"
            android:background="@color/colorAccent"
            />

    </LinearLayout>


</LinearLayout>
